--- a/views/front.erb
+++ b/views/front.erb
@@ -2,7 +2,6 @@
 	<head>
 		<title>Call Me Maybe?</title>
 		<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootswatch/2.3.2/cyborg/bootstrap.min.css">
-		<script type="text/javascript" src="https://static.vline.com/vline.js"></script>
 	</head>	
 	<body>
 		<div class="container">
@@ -29,7 +28,7 @@
 				</div>
 				<div class="row">
 					<div class="span6">
-				<!-- 	Video Stuff Goes Here -->
+					<a class='btn' href="./chat">Chat</a>
 					</div>
 				</div>
 			</div>
