able to login to vline

--- a/views/front.erb
+++ b/views/front.erb
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<title>Call Me Maybe?</title>
-		<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootswatch/2.3.2/cyborg/bootstrap.min.css">
+		<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootswatch/2.3.2/cosmo/bootstrap.min.css">
 	</head>	
 	<body>
 		<div class="container">
@@ -27,8 +27,8 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class="span6">
-					<a class='btn' href="./chat">Chat</a>
+					<div class="span">
+					<a class='btn btn-primary' href="./chat">Chat</a>
 					</div>
 				</div>
 			</div>
