--- a/views/front.erb
+++ b/views/front.erb
@@ -12,7 +12,7 @@
 						<div class="nav-collapse collapse">
 							<ul class="nav">
 								<li>
-									<a href="./chat">Chat</a>
+									<a href="./chat">Call</a>
 								</li>
 							</ul>
 						</div>
@@ -28,7 +28,7 @@
 				</div>
 				<div class="row">
 					<div class="span">
-					<a class='btn btn-primary' href="./chat">Chat</a>
+					<a class='btn btn-primary' href="./chat">Call</a>
 					</div>
 				</div>
 			</div>
