--- a/views/index.erb
+++ b/views/index.erb
@@ -37,12 +37,16 @@
 		
 			<div class="row">
 				<div class="span">
-					<div id="video-wrapper"></div>
+					<div id="video-wrapper">
+
+
+					</div>
 				</div>
 			</div>
 		</div>
 
 		<script type="text/javascript">
+		var vlineState;
 		$(document).ready(function(){
 			$('#login').click(function(){
 				vlineState = new vlineShell('skypekiller');
