--- a/views/index.erb
+++ b/views/index.erb
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<title>Call Me Maybe?</title>
-		<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootswatch/2.3.2/cosmo/bootstrap.min.css">
+		<link rel="stylesheet" href="metro.min.css">
 		<script type="text/javascript" src="https://static.vline.com/vline.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
 		<script type="text/javascript" src="vline-client.js"></script>
@@ -34,7 +34,11 @@
 					<input id ='useridbox' type="text" placeholder="serviceId:userId">
 				</div>
 			</div>
-		
+			<div class="row">
+				<div class="span">
+					Call me maybe: skypekiller:fn7gbg6r2s8pnux7
+				</div>
+			</div>
 			<div class="row">
 				<div class="span">
 					<div id="video-wrapper">
