--- a/views/front.erb
+++ b/views/front.erb
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<title>Call Me Maybe?</title>
-		<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootswatch/2.3.2/cosmo/bootstrap.min.css">
+		<link rel="stylesheet" href="metro.min.css">
 	</head>	
 	<body>
 		<div class="container">
